// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list doesn't try to render users on error 1`] = `
<div>
  <h2
    className="sc-AxhCb dXpqyO"
  >
    Users
  </h2>
  <div
    className="sc-AxhUy fkItVQ"
  />
</div>
`;

exports[`user list renders correctly 1`] = `
<div>
  <h2
    className="sc-AxhCb dXpqyO"
  >
    Users
  </h2>
  <div
    className="sc-AxhUy fkItVQ"
  />
</div>
`;

exports[`user list renders correctly 2`] = `
<div>
  <h2
    className="sc-AxhCb dXpqyO"
  >
    Users
  </h2>
  <div
    className="sc-AxhUy fkItVQ"
  >
    <div
      className="sc-AxjAm jahhFp"
    >
      <p
        className="sc-AxirZ kXBegF"
      >
        test
      </p>
    </div>
    <div
      className="sc-AxjAm jahhFp"
    >
      <p
        className="sc-AxirZ kXBegF"
      >
        admin
      </p>
      <p
        className="sc-AxiKw cCmoQb"
      >
        admin
      </p>
    </div>
  </div>
</div>
`;
